implement clean code directory service